<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="80dp"
        android:background="@color/gray">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="200dp"
            android:background="#23668F"
            android:orientation="vertical">

        </LinearLayout>

        <RelativeLayout


            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginStart="30dp"
                android:layout_marginTop="120dp"
                android:layout_marginEnd="30dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="35dp">


                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignStart="@+id/cardView">


                    <EditText
                        android:id="@+id/txtSellerName"
                        android:layout_width="0dp"
                        android:layout_height="40dp"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="68dp"
                        android:layout_marginEnd="16dp"
                        android:ems="10"
                        android:hint="@string/enter_name"
                        android:inputType="textPersonName"
                        android:textSize="14sp"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/txtSellerMobile"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="280dp"
                        android:ems="10"
                        android:hint="@string/enter_mobile_number"
                        android:inputType="phone"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtSellerName" />

                    <EditText
                        android:id="@+id/txtSellerEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="156dp"
                        android:ems="10"
                        android:hint="@string/enter_email"
                        android:inputType="textPersonName"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtSellerAddress" />

                    <EditText
                        android:id="@+id/txtSellerPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="108dp"
                        android:ems="10"
                        android:hint="@string/enter_password"
                        android:inputType="textPersonName"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtSellerEmail" />

                    <EditText
                        android:id="@+id/txtSellerConfirmPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="12dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="56dp"
                        android:ems="10"
                        android:hint="@string/confirm_password"
                        android:inputType="textPersonName"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtSellerPassword" />

                    <EditText
                        android:id="@+id/txtShopName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="64dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="260dp"
                        android:ems="10"
                        android:hint="@string/enter_shop_name"
                        android:inputType="textPersonName"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtSellerMobile"
                        app:layout_constraintVertical_bias="0.571" />

                    <EditText
                        android:id="@+id/txtSellerAddress"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="212dp"
                        android:ems="10"
                        android:hint="@string/enter_shop_address"
                        android:inputType="textPersonName"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtShopName"
                        app:layout_constraintVertical_bias="0.333" />

                    <Button
                        android:id="@+id/btnSellerNext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="80dp"
                        android:layout_marginEnd="80dp"
                        android:background="@drawable/rounded_r_border2"
                        android:fontFamily="casual"
                        android:text="@string/next"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent" />


                </android.support.constraint.ConstraintLayout>


            </androidx.cardview.widget.CardView>


        </RelativeLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="169dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="97dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="97dp"
                android:layout_marginBottom="8dp"
                android:fontFamily="sans-serif-condensed"
                android:text="@string/sign_up_as_seller"
                android:textColor="@android:color/background_light"
                android:textSize="24sp"
                app:layout_constraintBottom_toTopOf="@+id/imageView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="162dp"
                android:layout_height="148dp"

                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.042"
                app:srcCompat="@drawable/seller" />

        </android.support.constraint.ConstraintLayout>


    </RelativeLayout>

</LinearLayout>