<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/orange"
    android:orientation="vertical">


    <RelativeLayout
        android:id="@+id/relativeLayout2"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="20dp"
        android:background="@color/orange">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginBottom="200dp"
            android:background="#1C3B4E"
            android:orientation="vertical">

        </LinearLayout>

        <RelativeLayout


            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <androidx.cardview.widget.CardView
                android:id="@+id/cardView"
                android:layout_width="match_parent"
                android:layout_height="match_parent"

                android:layout_marginStart="30dp"
                android:layout_marginTop="120dp"
                android:layout_marginEnd="30dp"
                app:cardBackgroundColor="@android:color/white"
                app:cardCornerRadius="35dp">


                <android.support.constraint.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_alignStart="@+id/cardView"

                    android:layout_marginTop="35dp"
                    app:layout_constraintBottom_toBottomOf="@+id/txtBuyerEmail"
                    app:layout_constraintTop_toBottomOf="@+id/txtBuyerEmail">


                    <EditText
                        android:id="@+id/txtBuyerName"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="8dp"
                        android:ems="10"
                        android:hint="@string/enter_name"
                        android:inputType="textPersonName"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toTopOf="@+id/txtBuyerMobile"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent" />

                    <EditText
                        android:id="@+id/txtBuyerMobile"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="355dp"
                        android:ems="10"
                        android:hint="@string/enter_mobile_number"
                        android:inputType="phone"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtBuyerName"
                        app:layout_constraintVertical_bias="0.0" />

                    <EditText
                        android:id="@+id/txtBuyerAddress"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="307dp"
                        android:ems="10"
                        android:hint="@string/enter_address"
                        android:inputType="textPersonName"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtBuyerMobile"
                        app:layout_constraintVertical_bias="1.0" />

                    <EditText
                        android:id="@+id/txtBuyerEmail"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="211dp"
                        android:ems="10"
                        android:hint="@string/enter_email"
                        android:inputType="textPersonName"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtBuyerAddress"
                        app:layout_constraintVertical_bias="0.0" />

                    <EditText
                        android:id="@+id/txtBuyerPassword"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="115dp"
                        android:ems="10"
                        android:hint="@string/enter_password"
                        android:inputType="textPassword"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintHorizontal_bias="0.0"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtBuyerEmail"
                        app:layout_constraintVertical_bias="0.0" />

                    <EditText
                        android:id="@+id/txtBuyerConfirmPassowrd"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="8dp"
                        android:layout_marginEnd="16dp"
                        android:layout_marginBottom="67dp"
                        android:ems="10"
                        android:hint="@string/confirm_password"
                        android:inputType="textPassword"
                        android:textSize="14sp"
                        app:layout_constraintBottom_toBottomOf="parent"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtBuyerPassword"
                        app:layout_constraintVertical_bias="0.0" />

                    <Button
                        android:id="@+id/btnBuyerNext"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginStart="80dp"
                        android:layout_marginTop="16dp"
                        android:layout_marginEnd="80dp"
                        android:background="@drawable/rounded_r_border2"
                        android:fontFamily="casual"
                        android:text="@string/next"
                        android:textColor="@color/cardview_light_background"
                        android:textSize="10sp"
                        android:textStyle="bold"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toBottomOf="@+id/txtBuyerConfirmPassowrd" />


                </android.support.constraint.ConstraintLayout>


            </androidx.cardview.widget.CardView>


        </RelativeLayout>

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="160dp">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="97dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="97dp"
                android:layout_marginBottom="8dp"
                android:text="@string/sign_up_as_buyer"
                android:textColor="@android:color/background_light"
                android:textSize="23sp"
                app:layout_constraintBottom_toTopOf="@+id/imageView3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView3"
                android:layout_width="156dp"
                android:layout_height="136dp"

                android:layout_marginStart="8dp"
                android:layout_marginTop="24dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.502"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.046"
                app:srcCompat="@drawable/buyer" />

        </android.support.constraint.ConstraintLayout>


    </RelativeLayout>

</LinearLayout>